<resources>
    <string name="app_name">Places</string>
    <string name="title_activity_maps">Места</string>
    <string name="key">AIzaSyCd41NcKGeylMpBOrGn1J8wh8mp3YkA-MA</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Отметить себя</string>
    <string name="pick_place">Choose a place</string>
    <string name="action_settings">Parameter1</string>
    <string name="action_about">Parameter2</string>
    <string name="action_me">Найти меня</string>
    <string name="bottom_card_header">Заголовок карточки</string>
    <string name="bottom_card_context">Описание маркера</string>
    <string name="title_activity_main">Места</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="question_sign">\\?</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Места</string>
    <string name="tab_text_2">Трекер</string>
    <string name="tab_text_3">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="update_frequency_rus">
        <item>2 минуты</item>
        <item>5 минут</item>
        <item>10 минут</item>
    </string-array>
    <string-array name="google_map_styles">
        <item>Стилизованная</item>
        <item>Классическая</item>
        <item>Grayscale</item>
    </string-array>

    <string name="map_id">cc619ae2d6b79740</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_signin">Авторизация</string>
    <!-- Preference Titles -->
    <string name="places_header">Места</string>
    <string name="tracker_header">Трекер</string>
    <string name="profile_header">Профиль</string>
    <string name="common_header">Общее</string>
    <string name="unknown_location">Unknown location</string>
    <!-- Common Preferences -->
    <string name="app_theme">Тема приложения</string>
    <string name="mapkit">Карта приложения</string>
    <string name="sound_notification">Звук уведомлений</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="places_map_style">Стиль карты</string>
    <string name="tracker_map_style">Стиль карты</string>
    <string name="tracker_interval">Частота обновления</string>
    <string name="tracker_width">Толщина линии</string>
    <string name="open_system_geo">Открыть системные настройки</string>
    <string name="clear_history">Очистить историю</string>
    <string name="places_clear">Удалить все маркеры</string>
    <string name="tracker_clear">Удалить все маршруты</string>
    <string name="string_pull">^ Тянуть ^</string>
    <string name="string_delete">Удалить</string>


    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

</resources>